--- a/style.css
+++ b/style.css
@@ -11,6 +11,10 @@ body {
   position: relative;
 }
 
+.mobileNav {
+  display: none;
+}
+
 .overLay {
   width: 100%;
   height: 100vh;
@@ -434,4 +438,94 @@ section.trending .cards .card:nth-child(2) .details div span {
   color: #757575;
   font-weight: 500;
   border-radius: 0.2rem;
+}
+
+@media only screen and (max-width: 992px) {
+  header {
+    padding: 0 5rem;
+  }
+  header h1 {
+    width: 50%;
+    font-size: 1.7rem;
+  }
+  section.trending {
+    padding: 0 5rem;
+  }
+}
+@media only screen and (max-width: 768px) {
+  header {
+    padding: 0 3rem;
+  }
+  header h1 {
+    width: 50%;
+    font-size: 1.7rem;
+  }
+  section.trending {
+    padding: 0 3rem;
+  }
+  section.trending .cards {
+    flex-wrap: wrap;
+    gap: 2rem;
+  }
+  section.trending .cards .card {
+    width: 47%;
+  }
+}
+@media only screen and (max-width: 600px) {
+  nav {
+    display: none;
+  }
+  .mobileNav {
+    display: block;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
+  .mobileNav .logo {
+    width: 4rem;
+  }
+  .mobileNav .menu-burger {
+    font-size: 1.7rem;
+    color: white;
+  }
+  header {
+    padding: 0 2rem;
+  }
+  header small {
+    font-size: 0.7rem;
+    margin-top: -10rem;
+  }
+  header h1 {
+    width: 100%;
+    font-size: 1.7rem;
+  }
+  header .price h2 {
+    font-size: 2.3rem;
+  }
+  section.trending {
+    padding: 0rem 2rem;
+    height: auto;
+  }
+  section.trending .bar h2 {
+    font-size: 1rem;
+  }
+  section.trending .bar button {
+    font-size: 0.5rem;
+  }
+  section.trending .cards {
+    flex-direction: column;
+    gap: 2rem;
+  }
+  section.trending .cards .card {
+    width: 100%;
+  }
+  section.trending .cards .details {
+    padding: 0.5rem 0 !important;
+  }
+  section.trending .cards .details p {
+    font-size: 0.8rem;
+  }
+  section.trending .cards .details .cardPrice {
+    font-size: 1.2rem !important;
+  }
 }/*# sourceMappingURL=style.css.map */
