--- a/style.scss
+++ b/style.scss
@@ -30,6 +30,10 @@ body {
   position: relative;
 }
 
+.mobileNav {
+  display: none;
+}
+
 .overLay {
   width: 100%;
   height: 100vh;
@@ -452,6 +456,118 @@ section.trending {
             font-weight: 500;
             border-radius: 0.2rem;
           }
+        }
+      }
+    }
+  }
+}
+
+//responsive code
+@media only screen and (max-width: 1200px) {
+}
+
+@media only screen and (max-width: 992px) {
+  header {
+    padding: 0 5rem;
+    h1 {
+      width: 50%;
+      font-size: 1.7rem;
+    }
+  }
+  section.trending {
+    padding: 0 5rem;
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  header {
+    padding: 0 3rem;
+    h1 {
+      width: 50%;
+      font-size: 1.7rem;
+    }
+  }
+  section.trending {
+    padding: 0 3rem;
+
+    .cards {
+      flex-wrap: wrap;
+      gap: 2rem;
+
+      .card {
+        width: 47%;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  nav {
+    display: none;
+  }
+
+  .mobileNav {
+    display: block;
+    @include flexStyles(space-between, center);
+
+    .logo {
+      width: 4rem;
+    }
+
+    .menu-burger{
+      font-size: 1.7rem;
+      color: white;
+    }
+  }
+
+  header {
+    padding: 0 2rem;
+
+    small {
+      font-size: 0.7rem;
+      margin-top: -10rem;
+    }
+
+    h1 {
+      width: 100%;
+      font-size: 1.7rem;
+    }
+
+    .price {
+      h2 {
+        font-size: 2.3rem;
+      }
+    }
+  }
+
+  section.trending {
+    padding: 0rem 2rem;
+    height: auto;
+
+    .bar {
+      h2 {
+        font-size: 1rem;
+      }
+      button {
+        font-size: 0.5rem;
+      }
+    }
+
+    .cards {
+      flex-direction: column;
+      gap: 2rem;
+
+      .card {
+        width: 100%;
+      }
+
+      .details {
+        padding: 0.5rem 0 !important;
+        p {
+          font-size: 0.8rem;
+        }
+        .cardPrice {
+          font-size: 1.2rem !important;
         }
       }
     }
